05/pubsub/kubernetes/pubsub-publisher-no-credentials.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pubsub-publisher-no-credential
  labels:
    app: web
spec:
  containers:
    - name: pubsub-publisher
      image: gcr.io/YOUR_PROJECT_ID/pubsub-publisher
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pubsub-publisher
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
