05/pubsub/kubernetes/pubsub-publisher.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pubsub-publisher
  labels:
    app: web
spec:
  volumes:
    - name: credential
      secret:
        secretName: pubsub-credential
  containers:
    - name: pubsub-publisher
      image: gcr.io/YOUR_PROJECT_ID/pubsub-publisher # Fixme
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /home/root
          name: credential
---
apiVersion: v1
kind: Service
metadata:
  name: pubsub-publisher
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
