05/pubsub/kubernetes/wordpress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  volumes:
    - name: wordpress-sql-credential
      secret:
        secretName: wordpress-sql-proxy
  containers:
    - name: wordpress
      image: wordpress:5.2.3-php7.1-apache
      ports:
        - containerPort: 80
    - name: cloud-sql-proxy
      image: gcr.io/cloudsql-docker/gce-proxy:1.12
      command: ["/cloud_sql_proxy", "-instances=ca-container-book:asia-northeast1:wordpress=tcp:3306", "-credential_file=/home/root/credential.json"]
      ports:
        - containerPort: 3306
      volumeMounts:
        - mountPath: /home/root
          name: wordpress-sql-credential
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: LoadBalancer
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
